--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,14 +1,49 @@
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
+@font-face {
+  font-family: 'wotfardmedium';
+  src: url('/public/fonts/wotfard-medium-webfont.eot');
+  src: url('/public/fonts/wotfard-medium-webfont.eot?#iefix') format('embedded-opentype'),
+    url('/public/fonts/wotfard-medium-webfont.woff2') format('woff2'),
+    url('/public/fonts/wotfard-medium-webfont.ttf') format('truetype');
+  font-weight: normal;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: 'wotfardregular';
+  src: url('/public/fonts/wotfard-regular-webfont.eot');
+  src: url('/public/fonts/wotfard-regular-webfont.eot?#iefix') format('embedded-opentype'),
+    url('/public/fonts/wotfard-regular-webfont.woff2') format('woff2'),
+    url('/public/fonts/wotfard-regular-webfont.ttf') format('truetype');
+  font-weight: normal;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: 'wotfardsemibold';
+  src: url('/public/fonts/wotfard-semibold-webfont.eot');
+  src: url('/public/fonts/wotfard-semibold-webfont.eot?#iefix') format('embedded-opentype'),
+    url('/public/fonts/wotfard-semibold-webfont.woff2') format('woff2'),
+    url('/public/fonts/wotfard-semibold-webfont.ttf') format('truetype');
+  font-weight: normal;
+  font-style: normal;
+}
+
 html,
 body {
   padding: 0;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+  font-family: 'Wotfard', -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen, Ubuntu, Cantarell, Fira Sans,
+    Droid Sans, Helvetica Neue, sans-serif;
 }
 
 a {
   color: inherit;
-  text-decoration: none;
+  /* color: #23d7ff; */
+  /* text-decoration: none; */
 }
 
 * {
