--- a/styles/globals.css
+++ b/styles/globals.css
@@ -3,49 +3,141 @@
 @tailwind utilities;
 
 @font-face {
-  font-family: 'wotfardmedium';
-  src: url('/public/fonts/wotfard-medium-webfont.eot');
-  src: url('/public/fonts/wotfard-medium-webfont.eot?#iefix') format('embedded-opentype'),
-    url('/public/fonts/wotfard-medium-webfont.woff2') format('woff2'),
-    url('/public/fonts/wotfard-medium-webfont.ttf') format('truetype');
-  font-weight: normal;
+  font-family: 'Wotfard';
+  src: url('/fonts/wotfard-regular-webfont.eot');
+  src: url('/fonts/wotfard-regular-webfont.eot?#iefix') format('embedded-opentype'),
+    url('/fonts/wotfard-regular-webfont.woff2') format('woff2'),
+    url('/fonts/wotfard-regular-webfont.ttf') format('truetype');
+  font-weight: 400;
   font-style: normal;
+  font-display: swap;
 }
 
 @font-face {
-  font-family: 'wotfardregular';
-  src: url('/public/fonts/wotfard-regular-webfont.eot');
-  src: url('/public/fonts/wotfard-regular-webfont.eot?#iefix') format('embedded-opentype'),
-    url('/public/fonts/wotfard-regular-webfont.woff2') format('woff2'),
-    url('/public/fonts/wotfard-regular-webfont.ttf') format('truetype');
-  font-weight: normal;
+  font-family: 'Wotfard';
+  src: url('/fonts/wotfard-medium-webfont.eot');
+  src: url('/fonts/wotfard-medium-webfont.eot?#iefix') format('embedded-opentype'),
+    url('/fonts/wotfard-medium-webfont.woff2') format('woff2'),
+    url('/fonts/wotfard-medium-webfont.ttf') format('truetype');
+  font-weight: 500;
   font-style: normal;
+  font-display: swap;
 }
 
 @font-face {
-  font-family: 'wotfardsemibold';
-  src: url('/public/fonts/wotfard-semibold-webfont.eot');
-  src: url('/public/fonts/wotfard-semibold-webfont.eot?#iefix') format('embedded-opentype'),
-    url('/public/fonts/wotfard-semibold-webfont.woff2') format('woff2'),
-    url('/public/fonts/wotfard-semibold-webfont.ttf') format('truetype');
-  font-weight: normal;
+  font-family: 'Wotfard';
+  src: url('/fonts/wotfard-semibold-webfont.eot');
+  src: url('/fonts/wotfard-semibold-webfont.eot?#iefix') format('embedded-opentype'),
+    url('/fonts/wotfard-semibold-webfont.woff2') format('woff2'),
+    url('/fonts/wotfard-semibold-webfont.ttf') format('truetype');
+  font-weight: 600;
   font-style: normal;
+  font-display: swap;
 }
 
 html,
 body {
-  padding: 0;
-  margin: 0;
-  font-family: 'Wotfard', -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen, Ubuntu, Cantarell, Fira Sans,
-    Droid Sans, Helvetica Neue, sans-serif;
+  @apply antialiased font-wotfard bg-neutral-900;
 }
 
-a {
-  color: inherit;
-  /* color: #23d7ff; */
-  /* text-decoration: none; */
+h1 {
+  @apply text-2xl font-semibold leading-snug text-neutral-50;
+  letter-spacing: -0.005em;
+  /* line-height: 140%; */
+}
+
+h2 {
+  @apply text-xl font-semibold leading-snug text-neutral-200;
+}
+
+h3 {
+  @apply text-neutral-200;
+}
+
+h4 {
+  @apply text-xs font-semibold uppercase text-neutral-450;
+}
+
+p,
+h1,
+h2,
+h3,
+h4 {
+  @apply max-w-xl;
+}
+
+.small {
+  @apply text-sm;
+  letter-spacing: -0.01em;
+}
+
+#prose p {
+  @apply mb-8;
+  line-height: 162.5%;
+}
+
+#prose a,
+a.link {
+  @apply border-b text-neutral-300 border-neutral-400 hover:border-amber-400 hover:text-neutral-300;
 }
 
 * {
   box-sizing: border-box;
 }
+
+/*! purgecss start ignore */
+/* Goodreads */
+
+.gr_custom_container_1532863785 br,
+.gr_custom_container_1532863785 center,
+.gr_custom_header_1532863785 {
+  display: none;
+}
+
+/* .gr_custom_container_1532863785 img {
+  min-width: 80px;
+} */
+
+#gr_custom_widget_1532863785 {
+  margin-top: 1.25rem;
+}
+.gr_custom_each_container_1532863785 {
+  margin-bottom: 1rem;
+  display: grid;
+  grid-column-gap: 1rem;
+  -moz-column-gap: 1rem;
+  column-gap: 1rem;
+  grid-template-columns: 5rem auto;
+  grid-template-rows: auto 1fr;
+}
+.gr_custom_book_container_1532863785 {
+  grid-column: span 1 / span 1;
+  grid-row: span 2 / span 2;
+  grid-column-start: 1;
+  grid-row-start: 1;
+  @apply overflow-hidden rounded-md;
+}
+.gr_custom_title_1532863785 {
+  grid-column: span 1 / span 1;
+  grid-row: span 1 / span 1;
+  grid-column-start: 2;
+  grid-row-start: 1;
+  align-self: flex-start;
+  padding-top: 0.25rem;
+  @apply font-medium text-neutral-250;
+}
+.gr_custom_author_1532863785 {
+  grid-column: span 1 / span 1;
+  grid-row: span 1 / span 1;
+  grid-column-start: 2;
+  grid-row-start: 2;
+  align-self: flex-start;
+  @apply text-neutral-450;
+}
+.gr_custom_author_1532863785 a {
+  @apply border-b text-neutral-450 border-neutral-800;
+}
+/*! purgecss end ignore */
+
+/* https://www.goodreads.com/review/custom_widget/1073529.Brody's%20bookshelf:%20currently-reading?cover_position=left&cover_size=medium&num_books=5&order=a&shelf=currently-reading&show_author=1&show_cover=1&show_rating=0&show_review=0&show_tags=0&show_title=1&sort=date_added&widget_bg_color=FFFFFF&widget_bg_transparent=true&widget_border_width=none&widget_id=1532863785&widget_text_color=000000&widget_title_size=medium&widget_width=full
+https://www.goodreads.com/review/custom_widget/1073529.Brody's%20bookshelf:%20currently-reading?cover_position=left&cover_size=medium&num_books=5&order=a&shelf=currently-reading&show_author=1&show_cover=1&show_rating=0&show_review=0&show_tags=0&show_title=1&sort=date_added&widget_bg_color=FFFFFF&widget_bg_transparent=true&widget_border_width=none&widget_id=1532863785&widget_text_color=000000&widget_title_size=medium&widget_width=full */
